Fixes to .bio-0page missing in index.html; alignments in styles files</div>

--- a/Styles/bio-0page.css
+++ b/Styles/bio-0page.css
@@ -9,7 +9,7 @@
     background-color: rgb(245, 225, 210);
     font-family: "Birthstone";
     font-size: 16px;
-    font-weight: bold;
+    font-weight: 600;
     
   }
   
