--- a/Styles/bio-12thumbnails.css
+++ b/Styles/bio-12thumbnails.css
@@ -16,6 +16,5 @@ border-radius: 5px;
 border-color: brown;
 font-family: "Birthstone";
 font-size: 16px;
-font-weight: bold;
 padding-left: 5px;
 }
