--- a/Styles/bio-13text.css
+++ b/Styles/bio-13text.css
@@ -15,6 +15,5 @@
   border-radius: 5px;
   border-color: brown;
   font-size: 14.5px;
-  font-weight: 600;
   padding-left: 5px;
 }
