--- a/Styles/bio-2name.css
+++ b/Styles/bio-2name.css
@@ -7,7 +7,7 @@
   margin-left: auto;
   margin-right: auto;
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 800;
   border-style: ridge;
   border-color: brown; 
   border-width: 3px;
