--- a/Styles/bio-3grid-container.css
+++ b/Styles/bio-3grid-container.css
@@ -6,6 +6,7 @@
   width: 1210px;
   height: 450px;
   line-height: 95%;
+  font-weight: 500;
   grid-template-rows: 75px 75px 75px 75px;
   grid-template-columns: 350px 26px 210px 35px 210px 50px 210px;
   column-gap: 10px;
@@ -15,8 +16,4 @@
 {
   width: 350px; 
   height: 175px;
-
-
- 
-
 }
